--- a/templates/test1.html
+++ b/templates/test1.html
@@ -12,6 +12,10 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 	position: absolute;
 	z-index: -1;
 }
+		.logo img{
+		width:80%;
+		height:100px;
+	}
 	
 </style>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
