--- a/templates/firebase.html
+++ b/templates/firebase.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Database testing</title>
 	<style type="text/css">
+		@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+	@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 	body > #bg{
 	height: 100%;
 	width: 100%;
@@ -53,6 +55,7 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 .heading{
 	color:white;
 	height: 120px;
+	font-family: 'Lobster', cursive;
 }
 }
 @media screen and (max-width: 1018px) {
@@ -72,6 +75,7 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 	width: 100%;
 	height: 100%;
 	font-size: 28px;
+	font-family: 'Lobster', cursive;
 	
 }
 .image2 img{
@@ -109,6 +113,7 @@ marquee img{
 	width: 100%;
 	height: 100%;
 	font-size: 25px;
+	font-family: 'Lobster', cursive;
 	
 }
 .image2 img{
@@ -145,6 +150,7 @@ marquee img{
 	width: 100%;
 	height: 100%;
 	font-size: 23px;
+	font-family: 'Lobster', cursive;
 	
 }
 .image2 img{
@@ -180,12 +186,14 @@ marquee img{
 	color:white;
 	font-size: 25px;	
 	text-align: center;
+	font-family: 'Lobster', cursive;
 
 }
 .heading1 h1{
 	width: 100%;
 	height: 100%;
 	font-size: 20px;
+	font-family: 'Lobster', cursive;
 	
 }
 #myBtn {
@@ -222,6 +230,7 @@ marquee img{
 }
 .heading h1{
 	color:white;
+	font-family: 'Lobster', cursive;
 	
 	
 }
