--- a/templates/firebase.html
+++ b/templates/firebase.html
@@ -311,7 +311,7 @@ marquee img{
 <tr><td align="center" style = "padding:20px;">
 <button class = 'btn btn-primary' style="width: 200px; box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "><a href = "/login" style="color:#31458;text-decoration: none;">Enter Marks</a></button></td></tr>
 <tr><td align="center" style = "padding:20px;">
-<button class = 'btn btn-primary' style="width: 200px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "><a href = "/check" style="color:#31458;text-decoration: none;">View Marks</a></button></td></tr>
+<button class = 'btn btn-primary' style="width: 200px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "><a href = "/checkmarks" style="color:#31458;text-decoration: none;">View Marks</a></button></td></tr>
 <tr><td align="center" style = "padding:20px;">
 <button class = 'btn btn-danger' style="width: 200px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "><a href = "/login1" style="color:#31458;text-decoration: none;">Delete Marks</a></button></td></tr></table>
 </body>
