--- a/templates/update.html
+++ b/templates/update.html
@@ -31,6 +31,11 @@
 		<option value="4-1">4-1</option>
 		<option value="4-2">4-2</option>
 	</select></td></tr>
+	<tr><td align="center">
+	<select name  = 'mid'>
+		<option value="mid 1">mid 1</option>
+		<option value="mid 2">mid 2</option>
+	</select></td></tr>
 	<tr><td height="20px;"></td></tr>
 	<tr><td align="center">
 	<button class = "btn btn-danger" type="submit">Delete</button></td></tr>
