--- a/templates/checkmarks.html
+++ b/templates/checkmarks.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 <form action = "/checking" method = "POST">
-	<input type="text" name="regno"><br>
+	<table width = "100%">
+		<tr><td>
+			<input type="text" name="regno"></td></tr>
+		<tr><td>
 	<select name = "ear">
 		<option>1-1</option>
 		<option>1-2</option>
@@ -15,9 +18,11 @@
 		<option>3-2</option>
 		<option>4-1</option>
 		<option>4-2</option>
-	</select><br>
+			</select></td></tr>
 	
-	<input type="submit" value="submit">
-</form>
+	<tr><td align="center" style = "padding:20px;">
+<button class = 'btn btn-primary' style="width: 200px; box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; ">Submit</button></td></tr>
+	</table>
+		</form>
 </body>
 </html>
