--- a/templates/checkmarks.html
+++ b/templates/checkmarks.html
@@ -6,9 +6,9 @@
 <body>
 <form action = "/checking" method = "POST">
 	<table width = "100%">
-		<tr><td>
+		<tr><td align = "center>
 			<input type="text" name="regno"></td></tr>
-		<tr><td>
+		<tr><td align= "center>
 	<select name = "ear">
 		<option>1-1</option>
 		<option>1-2</option>
