--- a/templates/checkmarks.html
+++ b/templates/checkmarks.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 	<title>Details</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </head>
 <body>
 <form action = "/checking" method = "POST">
-	<table width = "100%">
-		<tr><td align = "center>
-			<input type="text" name="regno"></td></tr>
-		<tr><td align= "center>
+	<table width="100%" style="margin-top: 100px;">
+		<tr><td align="center">
+	<input type="text" name="regno" placeholder="Enter Regd.No"><br></td></tr>
+	<tr><td align = "center">
 	<select name = "ear">
 		<option>1-1</option>
 		<option>1-2</option>
@@ -18,11 +21,11 @@
 		<option>3-2</option>
 		<option>4-1</option>
 		<option>4-2</option>
-			</select></td></tr>
-	
-	<tr><td align="center" style = "padding:20px;">
-<button class = 'btn btn-primary' style="width: 200px; box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; ">Submit</button></td></tr>
-	</table>
-		</form>
+	</select></td></tr>
+	<tr><td align="center">
+<button class = 'btn btn-primary' style="width: 200px; box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; height: 30px; margin:30px;">Submit</button>
+
+</td></tr></table>
+</form>
 </body>
 </html>
