--- a/templates/test1.html
+++ b/templates/test1.html
@@ -25,9 +25,15 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 	<body><div id = "bg"></div>
 <table width="100%" >
 	<tr>
-		<td colspan  = "2" align="center" width="100%">
+		<td align="center" width="100%">
 			<div class = "logo">
 			<img src = "{{url_for('static',filename = 'images/unnamed.png')}}"></div>
+		</td>
+	</tr>
+	<tr>
+		<td align="center" width="100%" style="background-color: #031458;">
+			<div class = "heading">
+			<h1>Welcome to the Virtual lab of <br>AKRG CET</h1></div>
 		</td>
 	</tr>
 	<tr>
