--- a/templates/test1.html
+++ b/templates/test1.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Radio Buttons</title>
 	<style type="text/css">
+		@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 	body > #bg{
 	height: 100%;
 	width: 100%;
@@ -12,9 +13,18 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 	position: absolute;
 	z-index: -1;
 }
-		.logo img{
+	.logo img{
 		width:80%;
-		height:100px;
+		height:120px;
+	}
+
+ .heading{
+		font-family: 'Lobster', cursive;
+		background-color: #031458;
+		  color:white;
+		  
+		   
+		    
 	}
 	
 </style>
