--- a/templates/test1.html
+++ b/templates/test1.html
@@ -78,16 +78,16 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 		<td  align="center" width="50%">
 		</td>
 	</tr>
-	<tr><td width="50%">
+	<tr><td width="50%" align = "center">
 		<div class="nav justify-content-center">
 <button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/test1'">Civil</button></div></td>
-<td width="50%">
+<td width="50%"  align = "center">
 		<div class="nav justify-content-center">
 <button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/test1'">Mech</button></div></td></tr>
-	<tr><td width="50%">
+	<tr><td width="50%" align = "center">
 		<div class="nav justify-content-center">
 <button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/sub'">CSE</button></div></td>
-<td width="50%">
+<td width="50%" align = "center">
 		<div class="nav justify-content-center">
 <button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/test1'">Ece</button></div></td></tr>
 </table>
