--- a/templates/test1.html
+++ b/templates/test1.html
@@ -35,13 +35,13 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 	<body><div id = "bg"></div>
 <table width="100%" >
 	<tr>
-		<td align="center" width="100%">
+		<td align="center" width="100%" colspan = "2">
 			<div class = "logo">
 			<img src = "{{url_for('static',filename = 'images/unnamed.png')}}"></div>
 		</td>
 	</tr>
 	<tr>
-		<td align="center" width="100%" style="background-color: #031458;">
+		<td align="center" width="100%"  colspan = "2">
 			<div class = "heading">
 			<h1>Welcome to the Virtual lab of <br>AKRG CET</h1></div>
 		</td>
@@ -79,17 +79,16 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 		</td>
 	</tr>
 	<tr><td width="50%" align = "center">
-		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/test1'">Civil</button></div></td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/test1'">Civil</button></td>
 <td width="50%"  align = "center">
-		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/test1'">Mech</button></div></td></tr>
+	
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/test1'">Mech</button></td></tr>
 	<tr><td width="50%" align = "center">
-		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/sub'">CSE</button></div></td>
+		
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/sub'">CSE</button></td>
 <td width="50%" align = "center">
-		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/test1'">Ece</button></div></td></tr>
+	
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/test1'">Ece</button></td></tr>
 </table>
 </body>
 </html>
