--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 	<title>Home Page</title>
+	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "cec9df0a-efb6-4691-b242-f0050fec22fd",
+    });
+  });
+</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <style type="text/css">
 
