--- a/templates/home.html
+++ b/templates/home.html
@@ -2,15 +2,7 @@
 <html>
 <head>
 	<title>Home Page</title>
-	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-<script>
-  window.OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "cec9df0a-efb6-4691-b242-f0050fec22fd",
-    });
-  });
-</script>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <style type="text/css">
 
@@ -511,5 +503,6 @@ background-size: cover;background-attachment: fixed; background-position: center
 <tr><td colspan="2" width="100%" align="center">
 <footer style=" color: white;font-family: candara;font-size: 20px;background-color: #031458; padding-top: 20px; padding-bottom: 20px;">©CopyRight By CSE Students(2017 - 2021)</footer></td></tr>
 </table><div id = "bott"></div>
+	<!-- start webpushr code --> <script>(function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.async=1;js.src = "https://cdn.webpushr.com/app.min.js";fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));webpushr('setup',{'key':'BJchsrez6qdrz2oOUyqC91yFoO-hiZ_rJ29l-I2sv3GkAWhFF6d5gW6Cn8bkzsOVUlPsPFi-Uw2UDizUHXKYqMg' });</script><!-- end webpushr code -->
 </body>
 </html>
