--- a/templates/home.html
+++ b/templates/home.html
@@ -502,7 +502,5 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 1
 background-size: cover;background-attachment: fixed; background-position: center;  box-shadow: 0 0 500px rgba(0,0,0,0.9) inset;" height="500px" ><h1 style="color: white; padding-top: 200px; font-family: 'Francois One', sans-serif;">Our College</h1><h1 style="font-family: 'Francois One', sans-serif; color:white;">AKRG COLLEGE OF ENGINEERING & TECHNOLOGY</h1></td></tr>
 <tr><td colspan="2" width="100%" align="center">
 <footer style=" color: white;font-family: candara;font-size: 20px;background-color: #031458; padding-top: 20px; padding-bottom: 20px;">©CopyRight By CSE Students(2017 - 2021)</footer></td></tr>
-</table><div id = "bott"></div>
-	<!-- start webpushr code --> <script>(function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.async=1;js.src = "https://cdn.webpushr.com/app.min.js";fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));webpushr('setup',{'key':'BJchsrez6qdrz2oOUyqC91yFoO-hiZ_rJ29l-I2sv3GkAWhFF6d5gW6Cn8bkzsOVUlPsPFi-Uw2UDizUHXKYqMg' });</script><!-- end webpushr code -->
-</body>
+</table></body>
 </html>
