--- a/templates/home.html
+++ b/templates/home.html
@@ -284,6 +284,15 @@ marquee img{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <script src="jquery-2.1.4.js"></script>
+	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "d06fb33a-5901-430b-9694-8f092da82e25",
+    });
+  });
+</script>
 </head>
 <body>
 	<img src = "{{url_for('static',filename = 'images/arr1.png')}}" width="100px" height="100px" onclick="topFunction()" id="myBtn" title="Go to top">
