--- a/templates/home.html
+++ b/templates/home.html
@@ -17,36 +17,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Francois+One&family=Lobster&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Contrail+One&family=Fugaz+One&family=Leckerli+One&family=Marcellus+SC&family=Righteous&family=Rubik+Mono+One&display=swap');
 body > #bg{
 	height: 100%;
 	width: 100%;
-	background: rgb(255,231,0);
-background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%, rgba(255,231,0,1) 100%);
-	clip-path: polygon(50% 0%, 100% 0, 100% 43%, 55% 68%, 0 100%, 0% 43%, 0 0);
+	background: #37517E;
+	clip-path: polygon(0 0, 100% 0%, 100% 46%, 0 79%);
+
 	position: absolute;
 	z-index: -1;
+	box-shadow: 0px 0px 0.8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.9);
 }
 	.logo img{
 		width:80%;
 		height:120px;
-	}
 
+}
 
+div.poloroid{
+	width: 80%;
+	background-color: white;
+	  box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4);
+  margin-bottom: 25px;
+}
+
+div.poloroid img{
+	transition: transform .2s;
+}
+
+div.poloroid img:hover{
+	transform: scale(1.14);
+}
+div.container {
+  text-align: center;
+  padding: 10px 20px;
+  font-family: 'Contrail One', cursive;
+}
 marquee{
-	background: rgb(255,255,255);
+	background: #37517E;
 background: linear-gradient(90deg, rgba(255,255,255,1) 9%, rgba(255,235,42,1) 100%);
 }
 
  .heading{
 		font-family: 'Lobster', cursive;
-		background-color: #031458;
 		  color:white;
 		  
 		   
 		}
 .image2 img{
-	box-shadow: -10px -10px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	box-shadow: 0px 0px 0.8px 0px rgba(0, 0, 0, 4), 0 8px 8px 1px rgba(0, 0, 0, 0.9);
+	transition: transform .2s;
+}
+
+.image2 img:hover{
+	transform: scale(1.05);
 }
 	#myBtn {
   display: none;
@@ -292,7 +317,7 @@ marquee img{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <script src="jquery-2.1.4.js"></script>
-	
+    
 </head>
 <body>
 	<img src = "{{url_for('static',filename = 'images/arr1.png')}}" width="100px" height="100px" onclick="topFunction()" id="myBtn" title="Go to top">
@@ -326,6 +351,7 @@ function topFunction() {
 
 
 <div id = "bg"></div>
+<div id = "bag"></div>
 <table width="100%;">
 	<tr>
 		<td colspan  = "2" align="center" width="100%">
@@ -334,7 +360,7 @@ function topFunction() {
 		</td>
 	</tr>
 	<tr>
-		<td colspan  = "2" align="center" width="100%" style="background-color: #031458;">
+		<td colspan  = "2" align="center" width="100%" >
 			<div class = "heading">
 			<h1>Welcome to the Virtual lab of <br>AKRG CET</h1></div>
 		</td>
@@ -349,19 +375,19 @@ function topFunction() {
 		<ul class="nav justify-content-center">
 		<ul class="nav nav-pills">
   <li class="nav-item">
-  	<button type="button" class="btn btn-primary"  style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; ">
+  	<button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white; ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"></path>
   <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"></path>
 </svg>
-                <a href = "/" style="color: #31458;text-decoration: none;">Home</a>
+                <a href = "/" style="color: white;text-decoration: none;">Home</a>
               </button>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/firebase">Mid Marks</a>
+    <a class="nav-link" href="/firebase" style="color: white;">Mid Marks</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/test1">Tests</a>
+    <a class="nav-link" href="/test1" style="color: white;">Tests</a>
   </li>
   
 </ul></ul>
@@ -372,20 +398,30 @@ function topFunction() {
 		<td  align="center" width="50%">
 		</td>
 	</tr>
+	<tr><td width="50%" align="center">
+		<div class = "poloroid">
+			<img src="{{url_for('static',filename = 'images/akrgmain.jpg')}}" style="width: 100%">
+		</div>
+		<div class = "container">
+			<p>AKRG Main Campus</p>
+		</div>
+	</td>
+		<td width="50%" align="center">
+			<div class = "poloroid">
+			<img src="{{url_for('static',filename = 'images/akrg1.jpg')}}" style="width: 100%">
+		</div>
+		<div class = "container">
+			<p>AKRG CET Campus</p>
+		</div>
+		</td></tr>
 	<tr>
-		<td align="center" width = "40%">
+		<td align="center" width = "100%" colspan="2">
 			<div class = "heading1">
-			<h1 style="font-family: 'Oswald', sans-serif; color:black;">Here you can perform your Lab Works from Home!!
+			<h1 style="font-family: 'Righteous', cursive; color:black; ">Here you can perform your Lab Works from Home!!
 			We are providing different compilers to work 
 				on your lab assignments and to finish your programs</h1></div>
 		</td>
 
-		<td align="center" width="60%">
-			<div class = "image2">
-			<img src = "{{url_for('static',filename = 'images/student.jpg')}}" width="60%"></div>
-		</td>
-
-	</tr>
 <tr>
 		<td align="center" width="50%" height="40px;">
 		</td>
@@ -398,7 +434,7 @@ function topFunction() {
 		</td>
 	</tr>
 	
-	<tr style="background: rgb(255,255,255);
+	<tr style="background: #37517E;
 background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);">
 		<div class = "inside">
 		<td align="center" width="50%">
@@ -416,7 +452,7 @@ background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 
 		<td  align="center" width="50%">
 		</td>
 	</tr>
-	<tr style="background: rgb(255,255,255);
+	<tr style="background: #37517E;
 background: linear-gradient(90deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);">
 		<td align="center" width="50%">
 			<a href = "/python"><img src = "{{url_for('static',filename = 'images/python.png')}}"  width="30%;"></a>
@@ -431,7 +467,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 1
 		<td  align="center" width="50%">
 		</td>
 	</tr>
-	<tr style="background: rgb(255,255,255);
+	<tr style="background: #37517E;
 background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);">
 		<td align="center" width="50%">
 			<a href = "/ds"><img src = "{{url_for('static',filename = 'images/ds.png')}}"  width="40%"></a>
@@ -446,7 +482,7 @@ background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 
 		<td  align="center" width="50%">
 		</td>
 	</tr>
-	<tr style="background: rgb(255,255,255);
+	<tr style="background: #37517E;
 background: linear-gradient(90deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);">
 		<td align="center" width="50%">
 			<a href = "/htm"><img src = "{{url_for('static',filename = 'images/html.png')}}"  width="30%;"></a>
@@ -461,7 +497,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 1
 		<td  align="center" width="50%">
 		</td>
 	</tr>
-	<tr style="background: rgb(255,255,255);
+	<tr style="background: #37517E;
 background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);">
 		<td align="center" width="50%">
 			<a href = "/ml"><img src = "{{url_for('static',filename = 'images/ml.png')}}"  width="30%;" style="padding-top: 20px;padding-bottom: 20px;"></a>
@@ -476,7 +512,7 @@ background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 
 		<td  align="center" width="50%">
 		</td>
 	</tr>
-	<tr style="background: rgb(255,255,255);
+	<tr style="background: #37517E;
 background: linear-gradient(90deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);">
 		<td align="center" width="50%">
 			<a href = "/nix"><img src = "{{url_for('static',filename = 'images/nix.png')}}" width="30%;" style="padding-top: 20px; padding-bottom: 20px;"></a>
@@ -493,23 +529,22 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 1
 	</tr></div>
 
 <tr><td colspan="2" width="100%" align="center">
-<h2 style="font-size: 20px;">To Submit your assingment Please <a href = " https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZXhcwTsHSHBNMPhzvKghKlClmNMTQLBzJmXKXzmRqQWBkQkGWfGllLgtgchSDPXPwDhXV" target="_blank">Click Here</a></h2></td></tr>
+<h2 style="font-size: 20px;">To Submit your assingment Please <a href = " https://web.whatsapp.com/" target="_blank">Click Here</a></h2></td></tr>
 
-<tr><td colspan="2" width="100%" >
-
-<label style="font-size: 20px; font-family: candara; color: black;">Sincere thanks to </label></td></tr>
-<tr><td colspan="2" width="100%">
-<marquee >
-
-	<a href = "https://www.programiz.com/" target="_blank"><img src = "{{url_for('static',filename = 'images/pz1.png')}}"></a>
-	<a href = "https://www.javatpoint.com/" target="_blank"><img src = "{{url_for('static',filename = 'images/tp.png')}}" width="300px" height="180px;"></a>
-	<a href = "https://www.onlinegdb.com/" target="_blank"><img src = "{{url_for('static',filename = 'images/online.png')}}" width="300px" height="250px;"></a>
-	<a href = "https://www.tutorialspoint.com/codingground.htm" target="_blank"><img src = "{{url_for('static',filename = 'images/paiza.png')}}" width="300px" height="250px;"></a>
-</marquee></td></tr>
-
-<tr><td colspan="2" style="background-image: url('{{url_for('static',filename = 'images/akrg.jpg')}}') ;background-repeat: no-repeat;
-background-size: cover;background-attachment: fixed; background-position: center;  box-shadow: 0 0 500px rgba(0,0,0,0.9) inset;" height="500px" ><h1 style="color: white; padding-top: 200px; font-family: 'Francois One', sans-serif;">Our College</h1><h1 style="font-family: 'Francois One', sans-serif; color:white;">AKRG COLLEGE OF ENGINEERING & TECHNOLOGY</h1></td></tr>
 <tr><td colspan="2" width="100%" align="center">
-<footer style=" color: white;font-family: candara;font-size: 20px;background-color: #031458; padding-top: 20px; padding-bottom: 20px;">©CopyRight By CSE Students(2017 - 2021)</footer></td></tr>
-</table></body>
+
+<label style="font-size: 20px; font-family: candara;color: black;">Sincere thanks to </label></td></tr>
+<tr><td colspan="2" width="100%" align="center">
+
+	<h3><a href = "https://www.programiz.com/" target="_blank"><label style="margin: 20px; font-family: 'Fugaz One', cursive;">Programiz</label></a>
+	<a href = "https://www.javatpoint.com/" target="_blank"><label style="margin: 20px; font-family: 'Leckerli One', cursive;">Java T Point</label></a>
+	<a href = "https://www.onlinegdb.com/" target="_blank"><label style="margin: 20px; font-family: 'Rubik Mono One', sans-serif;">Online gdb</label></a>
+	<a href = "https://www.tutorialspoint.com/codingground.htm" target="_blank"><label style="margin: 20px; font-family: 'Marcellus SC', serif;">Tutorials Point</label></a></h3>
+</td></tr>
+
+
+<tr><td colspan="2" width="100%" align="center">
+<footer style=" color: white;font-family: candara;font-size: 20px;background-color: #031458; padding-top: 20px; padding-bottom: 20px;">©CopyRight By CSE Students(2k17 - 2021)</footer></td></tr>
+</table><div id = "bott"></div>
+</body>
 </html>
