--- a/templates/subjects.html
+++ b/templates/subjects.html
@@ -3,20 +3,21 @@
 <head>
 	<title>subjects</title>
 	<style type="text/css">
-		body > #bg{
+body > #bg{
 	height: 100%;
 	width: 100%;
-	background: rgb(255,231,0);
-background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%, rgba(255,231,0,1) 100%);
-	clip-path: polygon(100% 0, 100% 23%, 0 76%, 0 0);
+	background: #37517E;
+	clip-path: polygon(0 0, 100% 0%, 100% 46%, 0 79%);
+
 	position: absolute;
 	z-index: -1;
+	box-shadow: 0px 0px 0.8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.9);
 }
-		.logo img{
+	.logo img{
 		width:80%;
 		height:120px;
-	}
-	
+
+}
 </style>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
@@ -40,17 +41,17 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 		<ul class="nav justify-content-center">
 		<ul class="nav nav-pills">
    <li class="nav-item">
-    <a class="nav-link" href="/">Home</a>
+    <a class="nav-link" href="/" style="color: white;">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/firebase">Mid Marks</a>
+    <a class="nav-link" href="/firebase" style="color:white;">Mid Marks</a>
   </li>
   <li class="nav-item">
-    <button type="button" class="btn btn-primary" style = "box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; ">
+    <button type="button" class="btn btn-primary" style = "box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;">
                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-graph-up" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z"/>
 </svg>
-                <a href = "/test1" style="color: #031458;text-decoration: none;">Tests</a>
+                <a href = "/test1" style="color: white;text-decoration: none;">Tests</a>
               </button>
   </li>
   
@@ -63,26 +64,26 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 		</td></tr>
 <tr><td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/cppage'">CPP</button></div></td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "onclick="document.location='/cppage'">CPP</button></div></td>
 <td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/cnpage'">C++</button></div></td></div></tr>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "onclick="document.location='/cnpage'">C++</button></div></td></div></tr>
 <tr><td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; " onclick="document.location='/testpaper'">Python</button></div></td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; " onclick="document.location='/testpaper'">Python</button></div></td>
 <td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/dbmspage'">DBMS</button></div></td></div></tr>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "onclick="document.location='/dbmspage'">DBMS</button></div></td></div></tr>
 	<tr><td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/cnpage'">DS</button></div></td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "onclick="document.location='/cnpage'">DS</button></div></td>
 <td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/cnpage'">ADS</button></div></td></div></tr>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "onclick="document.location='/cnpage'">ADS</button></div></td></div></tr>
 	<tr><td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/cnpage'">CN</button></div></td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "onclick="document.location='/cnpage'">CN</button></div></td>
 <td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "onclick="document.location='/cnpage'">Java</button></div></td></div></tr>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "onclick="document.location='/cnpage'">Java</button></div></td></div></tr>
 	</table></body></html>
