--- a/templates/checkmarks.html
+++ b/templates/checkmarks.html
@@ -23,7 +23,7 @@
 		<option>4-2</option>
 	</select></td></tr>
 	<tr><td align="center">
-<button class = 'btn btn-primary' style="width: 200px; box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; height: 30px; margin:30px;">Submit</button>
+<button class = 'btn btn-primary' style="width: 200px; box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;  height: 30px; margin:30px;">Submit</button>
 
 </td></tr></table>
 </form>
