--- a/templates/firebase.html
+++ b/templates/firebase.html
@@ -298,7 +298,7 @@ marquee img{
 		<ul class="nav justify-content-center">
 		<ul class="nav nav-pills">
   <li class="nav-item">
-    <a class="nav-link" href="/">Home</a>
+    <a class="nav-link" href="/" style="color: white;text-decoration: none;">Home</a>
   </li>
    <li class="nav-item">
     <button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; " ">
@@ -309,16 +309,16 @@ marquee img{
               </button>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/test1">Tests</a>
+    <a class="nav-link" href="/test1" style="color: white;text-decoration: none;">Tests</a>
   </li>
   
 </ul></ul>
 	</td></tr>
 <tr><td align="center" style = "padding:20px;">
-<button class = 'btn btn-primary' style="width: 200px; box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "><a href = "/login" style="color:#31458;text-decoration: none;">Enter Marks</a></button></td></tr>
+<button class = 'btn btn-primary' style="width: 200px; box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;  "><a href = "/login" style="color:#31458;text-decoration: none;">Enter Marks</a></button></td></tr>
 <tr><td align="center" style = "padding:20px;">
-<button class = 'btn btn-primary' style="width: 200px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "><a href = "/checkmarks" style="color:#31458;text-decoration: none;">View Marks</a></button></td></tr>
+<button class = 'btn btn-primary' style="width: 200px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;  "><a href = "/checkmarks" style="color:#31458;text-decoration: none;">View Marks</a></button></td></tr>
 <tr><td align="center" style = "padding:20px;">
-<button class = 'btn btn-danger' style="width: 200px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; "><a href = "/login1" style="color:#31458;text-decoration: none;">Delete Marks</a></button></td></tr></table>
+<button class = 'btn btn-danger' style="width: 200px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;  "><a href = "/login1" style="color:#31458;text-decoration: none;">Delete Marks</a></button></td></tr></table>
 </body>
 </html>
