--- a/templates/ress.html
+++ b/templates/ress.html
@@ -77,6 +77,8 @@ background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 
 {% endfor %}</td>
 </tr>
 {% endif %}
+		<tr><td align="center" colspan="4">
+<button><a href = "/download">Download PDF</a></button></td></tr>
 </table>
 </body>
 </html>
