--- a/templates/download.html
+++ b/templates/download.html
@@ -4,8 +4,7 @@
 	<title>Download page</title>
 </head>
 <body>
-Downloading.....!!
-{% for marks in res1.each() %}
-{{marks.val()}}{% endfor %}
+	<center>
+		Downloaded Successfully!!</center>
 </body>
 </html>
